--- a/Views/Customers/Index.cshtml
+++ b/Views/Customers/Index.cshtml
@@ -1,203 +1,152 @@
-﻿@model IEnumerable<WETT.Data.Customer>
-
+﻿@*
+    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
+*@
 @{
     ViewData["Title"] = "Customers";
 }
 
-<h1>Index</h1>
+<div class="text-center">
+    <h1 class="display-4">Maintain Customers</h1>
+</div>
+<fieldset class="scheduler-border">
+    <legend class="scheduler-border">Search</legend>
+    <div class="input-group mb-3">
+        <input type="text" class="form-control" placeholder="Customer Name" aria-label="Customer Name" aria-describedby="basic-addon2" id="customerName">
+        <div class="input-group-append">
+            <button class="btn btn-outline-secondary" type="button">Search</button>
+        </div>
+    </div>
+</fieldset>
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.MbllCustomerNo)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.LicenceNumber)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Name)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Address)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.City)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Province)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.PostalCode)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Country)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.ContactName)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Phone1Type)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Phone1)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Phone2Type)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Phone2)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Phone3Type)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Phone3)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.ContactEmail)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.DeletedFlag)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.DeletedDate)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.InsertUserId)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.InsertTimestamp)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.UpdateUserId)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.UpdateTimestamp)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.CallFrequency)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Cdos)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.CustomerSource)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.CustomerStatusCodeNavigation)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.CustomerTypeCodeNavigation)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Segment)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Territory)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.MbllCustomerNo)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.LicenceNumber)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Name)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Address)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.City)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Province)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.PostalCode)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Country)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.ContactName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Phone1Type)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Phone1)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Phone2Type)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Phone2)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Phone3Type)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Phone3)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.ContactEmail)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.DeletedFlag)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.DeletedDate)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.InsertUserId)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.InsertTimestamp)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.UpdateUserId)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.UpdateTimestamp)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.CallFrequency.Description)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Cdos.Description)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.CustomerSource.Description)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.CustomerStatusCodeNavigation.CustomerStatusCode)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.CustomerTypeCodeNavigation.CustomerTypeCode)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Segment.Description)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Territory.Name)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.CustomerId">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.CustomerId">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.CustomerId">Delete</a>
-            </td>
-        </tr>
+<table id="customers" style="align: center"></table>
+<div id="jqGridPager"></div>
+
+@section scripts {
+<script type="text/javascript">
+
+    $.jgrid.defaults.styleUI = 'Bootstrap';
+    $.jgrid.defaults.responsive = true;
+
+    $(document).ready(function() {
+       $("#customers").jqGrid({
+               url: 'Customers/GetAll',
+               mtype: "GET",
+               guiStyle: "bootstrap",
+               iconSet: "fontAwesome",
+               idPrefix: "gb1_",
+               datatype: "json",
+               autowidth:true,
+               colModel: [
+                   {
+                        label: "Edit Actions",
+                        name: "actions",
+                        width: 125,
+                        fixed:true,
+                        formatter: "actions",
+                        formatoptions: {
+                            keys: true,
+                            editOptions: { },
+                            addOptions: { },
+                            delOptions: { url: 'Customer/Delete' }
+                        }
+                    },
+                   { label: 'MbllCustomerNo', name: 'mbllCustomerNo',fixed:true, editable: true,edittype:"text"},
+                   { label: 'Licence Number', name: 'licenceNumber',fixed:true, editable: true,width:120,editrules: { required: true }, edittype:"text"},
+                   { label: 'Customer Name', name: 'name',fixed:true, editable: true,edittype:"text"},
+                   { label: 'Address', name: 'address',fixed:true, editable: true,width:150, edittype:"text",editrules: { required: true },editoptions: {maxlength: 100} },
+                   { label: 'City', name: 'city',fixed:true,editable: true,width:100,edittype:"text",editoptions: {maxlength: 100} },
+                   { label: 'Province', name: 'province',fixed:true,editable: true,width:80, edittype:"text",editoptions: {maxlength: 50} },
+                   { label: 'Postal Code', name: 'postalCode',fixed:true,editable: true,width:100, edittype:"text",editoptions: {maxlength: 12} },
+                   { label: 'Country', name: 'country',fixed:true,editable: true,width:80, edittype:"text",editoptions: {maxlength: 50} },
+                   { label: 'Contact Name', name: 'contactName',fixed:true,editable: true, width:150,edittype:"text",editoptions: {maxlength: 100} },
+                   { label: 'Phone1 Type', name: 'phone1Type',fixed:true,editable: true,edittype:"text",width:120,editrules:{custom:true, custom_func:IsPhoneNumber, number:true, required: false} },
+                   { label: 'Phone1', name: 'phone1',fixed:true,editable: true,edittype:"text",width:120,editrules:{custom:true, custom_func:IsPhoneNumber, number:true, required: false} },
+                   { label: 'Phone2 Type', name: 'phone2Type',fixed:true,editable: true,edittype:"text",width:120,editrules:{custom:true, custom_func:IsPhoneNumber, number:true, required: false} },
+                   { label: 'Phone2', name: 'phone2',fixed:true,editable: true,edittype:"text",width:120,editrules:{custom:true, custom_func:IsPhoneNumber, number:true, required: false} },
+                   { label: 'Phone3 Type', name: 'phone3Type',fixed:true,editable: true,edittype:"text",width:120,editrules:{custom:true, custom_func:IsPhoneNumber, number:true, required: false} },
+                   { label: 'Phone3', name: 'phone3',fixed:true,editable: true,edittype:"text",width:120,editrules:{custom:true, custom_func:IsPhoneNumber, number:true, required: false} },
+                   { label: 'ContactEmail', name: 'contactEmail',fixed:true,editable: true, width:150,edittype:"text",editoptions: {maxlength: 100} },
+                   { label: 'Deleted Flag', name: 'deletedFlag',fixed:true,editable: true, width:150,edittype:"text",editoptions: {maxlength: 100} },
+                   { label: 'Deleted Date', name: 'deletedDate',fixed:true,editable: true, width:150,edittype:"text",editoptions: {maxlength: 100} },
+                   { label: 'Insert UserId', name: 'insertUserId',fixed:true,editable: true, width:150,edittype:"text",editoptions: {maxlength: 100} },
+                   { label: 'Insert Timestamp', name: 'insertTimestamp',fixed:true,editable: true, width:150,edittype:"text",editoptions: {maxlength: 100} },
+                   { label: 'Update UserId', name: 'updateUserId',fixed:true,editable: true, width:150,edittype:"text",editoptions: {maxlength: 100} },
+                   { label: 'Update Timestamp', name: 'updateTimestamp',fixed:true,editable: true, width:150,edittype:"text",editoptions: {maxlength: 100} },
+                   { label: 'Call Frequency', name: 'callFrequency',fixed:true,editable: true, width:150,edittype:"text",editoptions: {maxlength: 100} },
+                   { label: 'Cdos', name: 'cdos',fixed:true,editable: true, width:150,edittype:"text",editoptions: {maxlength: 100} },
+                   { label: 'Customer Source', name: 'customerSource',fixed:true,editable: true, width:150,edittype:"text",editoptions: {maxlength: 100} },
+                   { label: 'Customer Status Code Navigation', name: 'customerStatusCodeNavigation',fixed:true,editable: true, width:150,edittype:"text",editoptions: {maxlength: 100} },
+                   { label: 'Customer Type Code Navigation', name: 'customerTypeCodeNavigation',fixed:true,editable: true, width:150,edittype:"text",editoptions: {maxlength: 100} },
+                   { label: 'Segment', name: 'segment',fixed:true,editable: true, width:150,edittype:"text",editoptions: {maxlength: 100} },
+                   { label: 'Territory', name: 'territory',fixed:true,editable: true, width:150,edittype:"text",editoptions: {maxlength: 100} }
+
+
+               ],
+               viewrecords: true,
+               height: 250,
+               rowNum: 20,
+               pager: "#jqGridPager",
+               editurl: 'Customers/Update'
+               //onSelectRow: editRow, // the javascript function to call on row click. will use to put the row in edit mode
+               
+           }).hideCol("supplierId");
+
+
+           $('#customers').navGrid('#jqGridPager',
+               // the buttons to appear on the toolbar of the grid
+               { edit: false, add: true, del: false, search: false, refresh: false, view: false, position: "left", cloneToTop: false },
+               // options for the Add Dialog
+               {},
+               {
+                   closeAfterAdd: true,
+                   recreateForm: true,
+                   errorTextFormat: function (data) {
+                       return 'Error: ' + data.responseText
+                   },
+                   url: "Customer/Add"
+               });
+
+       });
+        
+        $('#customers').setGridWidth(60);
+
+       $("#supplierName").on('change keyup paste', function () {
+           SearchBySupplierName();
+       });
+
+    function SearchBySupplierName()
+    {
+        //  Fetch the text from our <input> control
+        var searchString = $("#name").val();
+
+        //  Prepare to pass a new search filter to our jqGrid
+        var f = { groupOp: "AND", rules: [] };
+
+        //  Remember to change the following line to reflect the jqGrid column you want to search for your string in
+        //  In this example, I'm searching through the UserName column.
+
+        f.rules.push({ field: "name", op: "cn", data: searchString });
+
+        var grid = $('#customers');
+        grid[0].p.search = f.rules.length > 0;
+        $.extend(grid[0].p.postData, { filters: JSON.stringify(f) });
+        grid.trigger("reloadGrid", [{ page: 1 }]);
+    }
+    
+      function IsPhoneNumber(value,colname)
+       {
+            var phoneNum = /^\(?([0-9]{3})\)?[-. ]?([0-9]{3})[-. ]?([0-9]{4})$/;
+         //if (value.length < 10 || value.length >11)
+         if(!value.match(phoneNum) || value.length !=10)
+
+         {
+              return [false,"Please enter valid phone number"];
+         }
+                else 
+                {
+             return [true,""];
+                }
+      }
+
+</script>
 }
-    </tbody>
-</table>
