Validation to pages

--- a/Views/SaExciseDuty/Index.cshtml
+++ b/Views/SaExciseDuty/Index.cshtml
@@ -54,7 +54,6 @@
     var header = false;
     var curRowId = -1;
     var ProductNameList= [];
-    var ProductSku="";
     var name ="";
     $(document).ready(function() {
        $("#SaExciseDuty").jqGrid({
@@ -98,7 +97,7 @@
                   $('#SaExciseDuty').jqGrid('setCell',curRowId,'supplierName', getSupplierNames(ui.item.value));
                   $('input#supplierName').val(getSupplierNames(ui.item.value));
                   $('#SaExciseDuty').jqGrid('setCell',curRowId,'productSku',getProductSku(ui.item.value));
-                  $('input#productSku').val(ProductSku.toString());
+                  $('input#productSku').val(getProductSku(ui.item.value));
                     
                 } });   
             }
