--- a/Views/SaRelease/Index.cshtml
+++ b/Views/SaRelease/Index.cshtml
@@ -68,9 +68,9 @@
     $.jgrid.defaults.styleUI = 'Bootstrap';
      $.jgrid.defaults.responsive = true;
     var header = false;
+    var isLocation = false;
     var curRowId = -1;
     var ProductNameList= [];
-    var ProductSku="";
     var name ="";
     $(document).ready(function() {
        $("#saRelease").jqGrid({
@@ -114,7 +114,7 @@
                   $('#saRelease').jqGrid('setCell',curRowId,'supplierName', getSupplierNames(ui.item.value));
                   $('input#supplierName').val(getSupplierNames(ui.item.value));
                   $('#saRelease').jqGrid('setCell',curRowId,'productSku',getProductSku(ui.item.value));
-                  $('input#productSku').val(ProductSku.toString());
+                  $('input#productSku').val(getProductSku(ui.item.value));
                     
                 } });   
             }
@@ -149,6 +149,10 @@
                   if(header==false) {
                       $.jgrid.hideModal("#editmod" + idSelector, {gbox: "#gbox_" + idSelector});
                       alert("Error: Need Header");
+                  }
+                  if(isLocation==false) {
+                      $.jgrid.hideModal("#editmod" + idSelector, {gbox: "#gbox_" + idSelector});
+                      alert("Error: Enter A Location");
                   }
               },
                    closeAfterAdd: true,
@@ -231,6 +235,7 @@
     
     function SaveHeader()
         {
+            
             header = true;
             console.log($("#date").val());
             var date = $("#date").val();
@@ -240,7 +245,11 @@
             var locationsDropdown= $("#locationsDropdown").val();
             var prevTransNo= $("#prevTransNo").val();
             var transNumber= $("#transNumber").val();
-
+            isLocation = false;
+            if(locationsDropdown!=-1)
+            {
+              isLocation=true;
+            
 
             $.ajaxSetup( { "async": false } );
             $.getJSON('saRelease/CreateHeader?data='+date+'/'+purchaseOrder+'/'+ portEntry+'/'+ locationsDropdown+'/'+ prevTransNo+'/'+transNumber +'/'+ notes, function(data) {
@@ -248,6 +257,7 @@
             $("#saCode").val(data);
                     });
             $.ajaxSetup( { "async": true } );
+            }
         }
 
     function SearchByComments()
